--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="font-sans bg-sky-500">
     <section class="max-w-4xl mx-auto mt-10 p-5">
         <h1 class="text-center font-semibold text-5xl text-rose-700 mb-10">Simple text Editor</h1>
-        <div class="btn-area bg-white py-3 px-5 shadow-lg rounded-md flex justify-between mb-5">
+        <div class="btn-area bg-white py-3 px-5 shadow-lg rounded-md grid grid-cols-2 md:flex justify-between mb-5">
             <div>
                 <button id="bold-btn" class="px-2 rounded-lg"><i class="fa-solid fa-bold"></i></button>
                 <button id="italic-btn" class="px-2 rounded-lg"><i class="fa-solid fa-italic"></i></button>
@@ -22,7 +22,7 @@
                 <button id="right-btn" class="px-2 rounded-lg"><i class="fa-solid fa-align-right"></i></button>
                 <button id="justify-btn" class="px-2 rounded-lg"><i class="fa-solid fa-align-justify"></i></button>
             </div>
-            <div class="">
+            <div >
                 <label for="number" class="text-base font-medium">Size : <input type="number" name="number" id="size-box" class="w-12 border-2 border-stone-400 pl-2 outline-none rounded-md text-stone-800" value="16"></label>
                 <button id="case-btn" class="rounded-lg px-2 mx-2"><i class="fa-solid fa-a"></i></button>
                 <input id="color" type="color">
